# bbok.rs

./: .env  Cargo.toml  diesel.toml
migrations/2025-08-23-134052_create_posts/: down.sql  up.sql
migrations/2025-08-23-161601_users/: up.sql
migrations/2025-08-23-163356_bus_routes/: up.sql
migrations/2025-08-23-164451_bus/: up.sql
migrations/2025-08-23-165140_trips/: up.sql
migrations/2025-08-23-165826_seats/: up.sql
migrations/2025-08-23-170121_booking/: up.sql
migrations/2025-08-23-170956_drivers/: up.sql
migrations/2025-08-23-171531_payment/: up.sql
migrations/2025-08-23-173500_cancellation/: up.sql
migrations/2025-08-23-175329_organizations/: up.sql
migrations/2025-08-23-175446_rating/: up.sql
src/: lib.rs  main.rs
src/lib/: connect.rs  middlewares.rs
src/models/: enums.rs  models.rs
src/routes/: signup.rs
src/schema/: schema.rs
