[package]
name = "devmet-project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"
diesel-derive-enum = "2.1.0"
chrono = "0.4"
bigdecimal = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
